test/sema/dereference-increment-expr-stmt.delta
// RUN: %check_errors %not %delta -typecheck %s

void f(int* p) {
    var a = p;

    // CHECK: [[@LINE+1]]:11: error: unexpected ';'
    *(a++);
}
